--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <header class = "cabecalho">
             <img class = "cabecalho-imagem" src="logo-cabecalho-SF.svg" alt="logo">
             <nav class="cabecalho-menu">
-            <a class ="cabecalho-menu-item">Comunidade</a>
-            <a class ="cabecalho-menu-item">Sobre nos</a>
+            <a class ="cabecalho-menu-item">Contato</a>
+            <a class ="cabecalho-menu-item">Sobre mim</a>
             </nav>
         </header>
 
